// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus snapshots > java-spring-maven (en) 1`] = `
{
  ".claude/commands/java-refactor.generated.md": "# Refactor (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/java-review.generated.md": "# Code Review (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Review the current diff against this repository's Java conventions (spring). Run \`./mvnw -B verify\` before approving the review. CI also runs \`./gradlew build\`. Pay special attention to transaction boundaries (@Transactional), dependency injection and the controller/service/repository separation. Also look for bugs: null-safety. Tests live under \`src/test/\`, \`src/test/java/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/java-testing.generated.md": "# Testing (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Write tests with junit for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`./mvnw -B verify\` before finishing. Place new tests under \`src/test/\`, \`src/test/java/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## Java (java)

### Stack defaults
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## Java (java)

Java project using spring (maven wrapper).

### Stack defaults
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Do not add new dependencies without declaring them in the existing build tool.

## Observed architecture

- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)",
  ".github/prompts/java-refactor.generated.prompt.md": "# Refactor (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/java-review.generated.prompt.md": "# Code Review (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Review the current diff against this repository's Java conventions (spring). Run \`./mvnw -B verify\` before approving the review. CI also runs \`./gradlew build\`. Pay special attention to transaction boundaries (@Transactional), dependency injection and the controller/service/repository separation. Also look for bugs: null-safety. Tests live under \`src/test/\`, \`src/test/java/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/java-testing.generated.prompt.md": "# Testing (Java)

## Verified repository context

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)

Write tests with junit for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`./mvnw -B verify\` before finishing. Place new tests under \`src/test/\`, \`src/test/java/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## Java (java)

Java project using spring (maven wrapper).

### Stack defaults
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Observed architecture

- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Java (java)

Java project using spring (maven wrapper).

### Stack defaults
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## What CI runs (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)

## Observed architecture

- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## Java (java)

Java project using spring (maven wrapper).

### Stack defaults
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Do not add new dependencies without declaring them in the existing build tool.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## What CI runs (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)

## Observed architecture

- Tests are placed under src/test/, src/test/java/. (evidence: \`src/test/\`, \`src/test/java/\`)
- Primary source code lives under src/main/. (evidence: \`src/main/\`)",
}
`;

exports[`corpus snapshots > java-spring-maven (es) 1`] = `
{
  ".claude/commands/java-refactor.generated.md": "# Refactor (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/java-review.generated.md": "# Code Review (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Revisa el diff actual contra las convenciones Java de este repositorio (spring). Ejecuta \`./mvnw -B verify\` antes de dar por buena la revisión. CI también ejecuta \`./gradlew build\`. Presta especial atención a los límites de transacción (@Transactional), la inyección de dependencias y la separación controller/service/repository. Busca también bugs: null-safety. Los tests viven en \`src/test/\`, \`src/test/java/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/java-testing.generated.md": "# Testing (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Escribe tests con junit para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`./mvnw -B verify\` antes de terminar. Coloca los tests nuevos en \`src/test/\`, \`src/test/java/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## Java (java)

### Defaults del stack
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Defaults del stack
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- No añadas dependencias nuevas sin declararlas en el gestor de build existente.

## Arquitectura observada

- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)",
  ".github/prompts/java-refactor.generated.prompt.md": "# Refactor (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/java-review.generated.prompt.md": "# Code Review (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Revisa el diff actual contra las convenciones Java de este repositorio (spring). Ejecuta \`./mvnw -B verify\` antes de dar por buena la revisión. CI también ejecuta \`./gradlew build\`. Presta especial atención a los límites de transacción (@Transactional), la inyección de dependencias y la separación controller/service/repository. Busca también bugs: null-safety. Los tests viven en \`src/test/\`, \`src/test/java/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/java-testing.generated.prompt.md": "# Testing (Java)

## Contexto verificado del repositorio

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)
- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)

Escribe tests con junit para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`./mvnw -B verify\` antes de terminar. Coloca los tests nuevos en \`src/test/\`, \`src/test/java/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Defaults del stack
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Arquitectura observada

- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Defaults del stack
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## Lo que ejecuta CI (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)

## Arquitectura observada

- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Defaults del stack
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- No añadas dependencias nuevas sin declararlas en el gestor de build existente.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## Lo que ejecuta CI (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)

## Arquitectura observada

- Los tests se colocan en src/test/, src/test/java/. (evidencia: \`src/test/\`, \`src/test/java/\`)
- El código principal vive en src/main/. (evidencia: \`src/main/\`)",
}
`;

exports[`corpus snapshots > monorepo-js-python (en) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## JavaScript (js-ts)

### Stack defaults
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Python (python)

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## JavaScript (js-ts)

JavaScript project using vue.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## JavaScript (js-ts)

JavaScript project using vue.

### Stack defaults
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using vue.

### Stack defaults
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.

## Structure

- \`backend/\`",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## JavaScript (js-ts)

JavaScript project using vue.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.
- Keep components/modules small and single-purpose.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

## Structure

- \`backend/\`",
}
`;

exports[`corpus snapshots > monorepo-js-python (es) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## JavaScript (js-ts)

### Defaults del stack
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Python (python)

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Defaults del stack
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Defaults del stack
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.

## Estructura

- \`backend/\`",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

## Estructura

- \`backend/\`",
}
`;

exports[`corpus snapshots > node-express-mocha (en) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Review the current diff against this repository's CommonJS conventions (express). Run \`npm test\` and \`npm run lint\` before approving the review. Pay special attention to middleware control flow, error propagation through \`next(err)\` and response lifecycle handling. Also look for bugs: async/await race conditions. Tests live under \`test/\`, \`test/acceptance/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Write tests with mocha for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing. Place new tests under \`test/\`, \`test/acceptance/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## JavaScript (js-ts)

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Verified local conventions

- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## JavaScript (js-ts)

JavaScript project using express.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Verified local conventions

- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

## Observed architecture

- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Primary source code lives under lib/. (evidence: \`lib/\`)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Review the current diff against this repository's CommonJS conventions (express). Run \`npm test\` and \`npm run lint\` before approving the review. Pay special attention to middleware control flow, error propagation through \`next(err)\` and response lifecycle handling. Also look for bugs: async/await race conditions. Tests live under \`test/\`, \`test/acceptance/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)

Write tests with mocha for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing. Place new tests under \`test/\`, \`test/acceptance/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## JavaScript (js-ts)

JavaScript project using express.

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Observed architecture

- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Primary source code lives under lib/. (evidence: \`lib/\`)

## Verified local conventions

- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using express.

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Repo commands

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`lib/\` — source code
- \`test/\` — tests
- \`test/acceptance/\` — tests
- entry point: \`lib/app.js\` (package.json "main")

## What CI runs (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)

## Observed architecture

- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Primary source code lives under lib/. (evidence: \`lib/\`)

## Verified local conventions

- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## JavaScript (js-ts)

JavaScript project using express.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.
- Keep components/modules small and single-purpose.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Repo commands

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`lib/\` — source code
- \`test/\` — tests
- \`test/acceptance/\` — tests
- entry point: \`lib/app.js\` (package.json "main")

## What CI runs (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)

## Observed architecture

- Declared entry points: main -> lib/app.js. (evidence: \`package.json\`)
- Tests are placed under test/, test/acceptance/. (evidence: \`test/\`, \`test/acceptance/\`)
- Primary source code lives under lib/. (evidence: \`lib/\`)

## Verified local conventions

- Indentation uses spaces with size 2. (evidence: \`.editorconfig\`)
- Files must end with a final newline. (evidence: \`.editorconfig\`)",
}
`;

exports[`corpus snapshots > node-express-mocha (es) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (express). Ejecuta \`npm test\` y \`npm run lint\` antes de dar por buena la revisión. Presta especial atención al flujo de middleware, la propagación de errores con \`next(err)\` y el ciclo de vida de la respuesta. Busca también bugs: condiciones de carrera en async/await. Los tests viven en \`test/\`, \`test/acceptance/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Escribe tests con mocha para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar. Coloca los tests nuevos en \`test/\`, \`test/acceptance/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## JavaScript (js-ts)

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Convenciones locales verificadas

- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Convenciones locales verificadas

- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

## Arquitectura observada

- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- El código principal vive en lib/. (evidencia: \`lib/\`)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (express). Ejecuta \`npm test\` y \`npm run lint\` antes de dar por buena la revisión. Presta especial atención al flujo de middleware, la propagación de errores con \`next(err)\` y el ciclo de vida de la respuesta. Busca también bugs: condiciones de carrera en async/await. Los tests viven en \`test/\`, \`test/acceptance/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)
- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)

Escribe tests con mocha para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar. Coloca los tests nuevos en \`test/\`, \`test/acceptance/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Arquitectura observada

- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- El código principal vive en lib/. (evidencia: \`lib/\`)

## Convenciones locales verificadas

- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Comandos del repo

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`lib/\` — código fuente
- \`test/\` — tests
- \`test/acceptance/\` — tests
- punto de entrada: \`lib/app.js\` (package.json "main")

## Lo que ejecuta CI (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)

## Arquitectura observada

- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- El código principal vive en lib/. (evidencia: \`lib/\`)

## Convenciones locales verificadas

- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Comandos del repo

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`lib/\` — código fuente
- \`test/\` — tests
- \`test/acceptance/\` — tests
- punto de entrada: \`lib/app.js\` (package.json "main")

## Lo que ejecuta CI (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)

## Arquitectura observada

- Puntos de entrada declarados: main -> lib/app.js. (evidencia: \`package.json\`)
- Los tests se colocan en test/, test/acceptance/. (evidencia: \`test/\`, \`test/acceptance/\`)
- El código principal vive en lib/. (evidencia: \`lib/\`)

## Convenciones locales verificadas

- La indentación usa espacios con tamaño 2. (evidencia: \`.editorconfig\`)
- Los archivos deben terminar con una línea nueva. (evidencia: \`.editorconfig\`)",
}
`;

exports[`corpus snapshots > node-plain (en) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## JavaScript (js-ts)

### Stack defaults
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## JavaScript (js-ts)

JavaScript project.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## JavaScript (js-ts)

JavaScript project.

### Stack defaults
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project.

### Stack defaults
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## JavaScript (js-ts)

JavaScript project.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.
- Keep components/modules small and single-purpose.",
}
`;

exports[`corpus snapshots > node-plain (es) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## JavaScript (js-ts)

### Defaults del stack
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## JavaScript (js-ts)

Proyecto JavaScript.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## JavaScript (js-ts)

Proyecto JavaScript.

### Defaults del stack
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript.

### Defaults del stack
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## JavaScript (js-ts)

Proyecto JavaScript.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.",
}
`;

exports[`corpus snapshots > node-react-vitest (en) 1`] = `
{
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)

Review the current diff against this repository's CommonJS conventions (react). Run \`npm test\` before approving the review. Pay special attention to hook dependencies (\`useEffect\`), unnecessary re-renders and derived state. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)

Write tests with vitest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## JavaScript (js-ts)

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## JavaScript (js-ts)

JavaScript project using react.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)

Review the current diff against this repository's CommonJS conventions (react). Run \`npm test\` before approving the review. Pay special attention to hook dependencies (\`useEffect\`), unnecessary re-renders and derived state. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

## Verified repository context

- test: \`npm test\` (package.json)

Write tests with vitest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## JavaScript (js-ts)

JavaScript project using react.

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using react.

### Stack defaults
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

## Canonical commands

- test: \`npm test\` (package.json)

## Repo commands

- \`npm test\` → \`vitest run\` (package.json)",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## JavaScript (js-ts)

JavaScript project using react.

### Stack defaults
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.
- Keep components/modules small and single-purpose.

## Canonical commands

- test: \`npm test\` (package.json)

## Repo commands

- \`npm test\` → \`vitest run\` (package.json)",
}
`;

exports[`corpus snapshots > node-react-vitest (es) 1`] = `
{
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (react). Ejecuta \`npm test\` antes de dar por buena la revisión. Presta especial atención a las dependencias de hooks (\`useEffect\`), renders innecesarios y estado derivado. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)

Escribe tests con vitest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## JavaScript (js-ts)

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (react). Ejecuta \`npm test\` antes de dar por buena la revisión. Presta especial atención a las dependencias de hooks (\`useEffect\`), renders innecesarios y estado derivado. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

## Contexto verificado del repositorio

- test: \`npm test\` (package.json)

Escribe tests con vitest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Defaults del stack
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

## Comandos canónicos

- test: \`npm test\` (package.json)

## Comandos del repo

- \`npm test\` → \`vitest run\` (package.json)",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Defaults del stack
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.

## Comandos canónicos

- test: \`npm test\` (package.json)

## Comandos del repo

- \`npm test\` → \`vitest run\` (package.json)",
}
`;

exports[`corpus snapshots > python-fastapi (en) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## Python (python)

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## Python (python)

Python project using fastapi.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.",
}
`;

exports[`corpus snapshots > python-fastapi (es) 1`] = `
{
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## Python (python)

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## Python (python)

Proyecto Python con fastapi.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.",
}
`;

exports[`corpus snapshots > python-uv-tox (en) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Review the current diff against this repository's Python conventions (flask). Run \`uv run pytest\` before approving the review. The full environment matrix runs through tox (\`tox.ini\`). Pay special attention to application/request context, blueprints and HTTP error handling. Also look for bugs: incorrect exception handling. Tests live under \`tests/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`uv run pytest\` before finishing. Place new tests under \`tests/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generated by agent-rules-init from what was detected in this repo.

Concise rules Cursor should always apply while editing this repository.

## Python (python)

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Verified local conventions

- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

Apply these conventions when completing and modifying code. Omit terminal operations unless the change requires them.

## Python (python)

Python project using flask.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

## Verified local conventions

- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

## Observed architecture

- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- Primary source code lives under src/. (evidence: \`src/\`)",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Review the current diff against this repository's Python conventions (flask). Run \`uv run pytest\` before approving the review. The full environment matrix runs through tox (\`tox.ini\`). Pay special attention to application/request context, blueprints and HTTP error handling. Also look for bugs: incorrect exception handling. Tests live under \`tests/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

## Verified repository context

- test: \`uv run pytest\` (ci: tests.yml)
- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`uv run pytest\` before finishing. Place new tests under \`tests/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

Operational rules for modifying this repository. Respect scope and validate changes with the commands below.

## Python (python)

Python project using flask.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Observed architecture

- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- Primary source code lives under src/. (evidence: \`src/\`)

## Verified local conventions

- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using flask.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Repo commands

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`tests/\` — tests
- entry point: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## What CI runs (GitHub Actions)

- \`uv run pytest\` (tests.yml)

## Observed architecture

- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- Primary source code lives under src/. (evidence: \`src/\`)

## Verified local conventions

- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generated by agent-rules-init from what was detected in this repo.

Project context for investigating, implementing and verifying changes with Gemini CLI.

## Python (python)

Python project using flask.

### Stack defaults
- Follow PEP 8; use type hints on public functions.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Repo commands

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`tests/\` — tests
- entry point: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## What CI runs (GitHub Actions)

- \`uv run pytest\` (tests.yml)

## Observed architecture

- Declared entry points: fixture-app -> fixture_app.cli:main. (evidence: \`pyproject.toml\`)
- Tests are placed under tests/. (evidence: \`tests/\`)
- Primary source code lives under src/. (evidence: \`src/\`)

## Verified local conventions

- ruff configures a maximum line length of 100. (evidence: \`pyproject.toml\`)",
}
`;

exports[`corpus snapshots > python-uv-tox (es) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Revisa el diff actual contra las convenciones Python de este repositorio (flask). Ejecuta \`uv run pytest\` antes de dar por buena la revisión. La matriz completa de entornos se ejecuta con tox (\`tox.ini\`). Presta especial atención al contexto de aplicación/petición, los blueprints y el manejo de errores HTTP. Busca también bugs: manejo de excepciones incorrecto. Los tests viven en \`tests/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`uv run pytest\` antes de terminar. Coloca los tests nuevos en \`tests/\`.
",
  ".cursor/rules/repository.generated.mdc": "---
description: Repository-specific conventions and validation commands
alwaysApply: true
---

# Repository rules

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas breves que Cursor debe aplicar siempre al editar este repositorio.

## Python (python)

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Convenciones locales verificadas

- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

Aplica estas convenciones al completar y modificar código. Omite tareas operativas de terminal salvo que sean necesarias para el cambio.

## Python (python)

Proyecto Python con flask.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

## Convenciones locales verificadas

- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

## Arquitectura observada

- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- El código principal vive en src/. (evidencia: \`src/\`)",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Revisa el diff actual contra las convenciones Python de este repositorio (flask). Ejecuta \`uv run pytest\` antes de dar por buena la revisión. La matriz completa de entornos se ejecuta con tox (\`tox.ini\`). Presta especial atención al contexto de aplicación/petición, los blueprints y el manejo de errores HTTP. Busca también bugs: manejo de excepciones incorrecto. Los tests viven en \`tests/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

## Contexto verificado del repositorio

- test: \`uv run pytest\` (ci: tests.yml)
- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`uv run pytest\` antes de terminar. Coloca los tests nuevos en \`tests/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Reglas operativas para modificar este repositorio. Respeta el alcance y valida los cambios con los comandos indicados.

## Python (python)

Proyecto Python con flask.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Arquitectura observada

- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- El código principal vive en src/. (evidencia: \`src/\`)

## Convenciones locales verificadas

- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con flask.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Comandos del repo

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`tests/\` — tests
- punto de entrada: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## Lo que ejecuta CI (GitHub Actions)

- \`uv run pytest\` (tests.yml)

## Arquitectura observada

- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- El código principal vive en src/. (evidencia: \`src/\`)

## Convenciones locales verificadas

- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)",
  "GEMINI.generated.md": "# GEMINI.md

Generado por agent-rules-init a partir de lo detectado en este repo.

Contexto de proyecto para investigar, implementar y verificar cambios con Gemini CLI.

## Python (python)

Proyecto Python con flask.

### Defaults del stack
- Sigue PEP 8; usa type hints en funciones públicas.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Comandos del repo

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`tests/\` — tests
- punto de entrada: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## Lo que ejecuta CI (GitHub Actions)

- \`uv run pytest\` (tests.yml)

## Arquitectura observada

- Puntos de entrada declarados: fixture-app -> fixture_app.cli:main. (evidencia: \`pyproject.toml\`)
- Los tests se colocan en tests/. (evidencia: \`tests/\`)
- El código principal vive en src/. (evidencia: \`src/\`)

## Convenciones locales verificadas

- ruff configura una longitud máxima de línea de 100. (evidencia: \`pyproject.toml\`)",
}
`;
